--- a/front-end/project-front-end/package.json
+++ b/front-end/project-front-end/package.json
@@ -47,6 +47,7 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "dotenv": "^8.1.0",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
@@ -57,6 +58,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
+    "process-env": "^1.1.0",
     "react": "16.8.0",
     "react-dom": "16.8.0",
     "react-map-gl": "^5.0.10",
